--- a/Enunciado_M2_03.ipynb
+++ b/Enunciado_M2_03.ipynb
@@ -43,49 +43,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== Ejercicio 1.1: Número y su tipo ===\n",
-      "Valor: 1\n",
-      "Tipo: <class 'str'>\n",
-      "\n",
-      "=== Ejercicio 1.2: Número como int ===\n",
-      "Valor: 1\n",
-      "Tipo: <class 'str'>\n",
-      "\n",
-      "=== Ejercicio 1.2: Número como int ===\n",
-      "Valor: 1\n",
-      "Tipo: <class 'int'>\n",
-      "\n",
-      "=== Ejercicio 1.3: Número como float ===\n",
-      "Valor: 1\n",
-      "Tipo: <class 'int'>\n",
-      "\n",
-      "=== Ejercicio 1.3: Número como float ===\n",
-      "Valor: 1.2\n",
-      "Tipo: <class 'float'>\n",
-      "Valor: 1.2\n",
-      "Tipo: <class 'float'>\n"
+      "10\n",
+      "<class 'str'>\n",
+      "21\n",
+      "<class 'int'>\n",
+      "12.12\n",
+      "<class 'float'>\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "print(\"=== Ejercicio 1.1: Número y su tipo ===\")\n",
-    "numero_texto = input(\"Introduce un número: \")\n",
-    "print(f\"Valor: {numero_texto}\")\n",
-    "print(f\"Tipo: {type(numero_texto)}\")\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Ejercicio 1.2: Número como int ===\")\n",
-    "numero_int = int(input(\"Introduce un número entero: \"))\n",
-    "print(f\"Valor: {numero_int}\")\n",
-    "print(f\"Tipo: {type(numero_int)}\")\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Ejercicio 1.3: Número como float ===\")\n",
-    "numero_float = float(input(\"Introduce un número decimal: \"))\n",
-    "print(f\"Valor: {numero_float}\")\n",
-    "print(f\"Tipo: {type(numero_float)}\")"
+    "valor1 = input(\"Introduce un número: \")\n",
+    "print(valor1)\n",
+    "print(type(valor1))\n",
+    "valor2 = int( input(\"Introduce un número entero: \") )\n",
+    "print(valor2)\n",
+    "print(type(valor2))\n",
+    "valor3 = float( input(\"Introduce un número decimal (con punto decimal): \") )\n",
+    "print(valor3)\n",
+    "print(type(valor3))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -101,26 +85,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Número formateado (5 dígitos con 0s): 00001\n",
-      "Número formateado (5 dígitos enteros, 3 decimales): 0001.200\n",
-      "Número formateado (5 dígitos enteros, 3 decimales): 0001.200\n"
+      "00003\n",
+      "00002.100\n",
+      "00002.100\n"
+     ]
+    }
+   ],
+   "source": [
+    "valor = int(input(\"dime un numero entero:\"))\n",
+    "print( \"{:05d}\".format(valor) )\n",
+    "num2 = float(input(\"Introduzca un numero:\"))\n",
+    "print( \"{:09.3f}\".format(num2) )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrada no válida para entero.\n",
+      "Float formateado: 00001.000\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "numero_entero = int(input(\"Introduce un número entero: \"))\n",
-    "print(f\"Número formateado (5 dígitos con 0s): {numero_entero:05d}\")\n",
+    "try:\n",
+    "    valor = int(input(\"dime un numero entero:\"))\n",
+    "    print(f\"Entero con 5 dígitos: {valor:05d}\")\n",
+    "except ValueError:\n",
+    "    print(\"Entrada no válida para entero.\")\n",
     "\n",
-    "numero_flotante = float(input(\"Introduce un número decimal: \"))\n",
-    "print(f\"Número formateado (5 dígitos enteros, 3 decimales): {numero_flotante:08.3f}\")"
+    "try:\n",
+    "    num2 = float(input(\"Introduzca un numero:\"))\n",
+    "    print(f\"Float formateado: {num2:09.3f}\")\n",
+    "except ValueError:\n",
+    "    print(\"Entrada no válida para número decimal.\")\n"
    ]
   },
   {
@@ -144,54 +155,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "=== Forma 1: f-string ===\n",
-      "La altura es de 1.75 metros y el peso es de 65.0 KG\n",
-      "\n",
-      "=== Forma 2: format() ===\n",
-      "La altura es de 1.75 metros y el peso es de 65.0 KG\n",
-      "\n",
-      "=== Forma 3: format() con nombres ===\n",
-      "La altura es de 1.75 metros y el peso es de 65.0 KG\n",
-      "\n",
-      "=== Forma 4: Concatenación ===\n",
-      "La altura es de 1.75 metros y el peso es de 65.0 KG\n",
-      "\n",
-      "=== Forma 5: Formato % ===\n",
-      "La altura es de 1.75 metros y el peso es de 65.0 KG\n",
-      "\n",
-      "=== Forma 6: f-string con decimales ===\n",
-      "La altura es de 1.75 metros y el peso es de 65.000 KG\n"
+      "La altura es de 120.0 metros y el peso es de 150.0 KG\n",
+      "La altura es de 120.0 metros y el peso es de 150.0 KG\n",
+      "La altura es de 120.0 metros y el peso es de 150.0 KG\n",
+      "La altura es de 120.0 metros y el peso es de 150.0 KG\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "altura = float(input(\"Introduce la altura (metros): \"))\n",
-    "peso = float(input(\"Introduce el peso (kg): \"))\n",
-    "\n",
-    "print(\"\\n=== Forma 1: f-string ===\")\n",
-    "print(f\"La altura es de {altura} metros y el peso es de {peso} KG\")\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Forma 2: format() ===\")\n",
+    "altura = float(input(\"Introduzca la altura: \"))\n",
+    "peso = float(input(\"Introduzca el peso: \"))\n",
+    "print(\"La altura es de\", altura, \"metros y el peso es de\", peso, \"KG\")\n",
     "print(\"La altura es de {} metros y el peso es de {} KG\".format(altura, peso))\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Forma 3: format() con nombres ===\")\n",
-    "print(\"La altura es de {h} metros y el peso es de {p} KG\".format(h=altura, p=peso))\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Forma 4: Concatenación ===\")\n",
-    "print(\"La altura es de \" + str(altura) + \" metros y el peso es de \" + str(peso) + \" KG\")\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Forma 5: Formato % ===\")\n",
-    "print(\"La altura es de %s metros y el peso es de %s KG\" % (altura, peso))\n",
-    "\n",
-    "\n",
-    "print(\"\\n=== Forma 6: f-string con decimales ===\")\n",
-    "print(f\"La altura es de {altura:.2f} metros y el peso es de {peso:.3f} KG\")"
+    "print(\"La altura es de {a} metros y el peso es de {p} KG\".format(a=altura, p=peso))\n",
+    "print(\"La altura es de {0} metros y el peso es de {1} KG\".format(altura, peso))"
    ]
   }
  ],
